--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.textuality.lifesaver2"
-    android:versionCode="6"
-    android:versionName="2.2" >
+    android:versionCode="7"
+    android:versionName="2.3" >
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
 
@@ -19,13 +19,14 @@
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
     
-    <!--  Required for default SMS application in KitKat. -->
+    <!--  Required for default SMS application in KitKat. 
     <uses-permission android:name="android.permission.BROADCAST_SMS" />
     <uses-permission android:name="android.permission.BROADCAST_WAP_PUSH" />
-    <uses-permission android:name="android.permission.SEND_RESPOND_VIA_MESSAGE" />
+    <uses-permission android:name="android.permission.SEND_RESPOND_VIA_MESSAGE" />-->
 
     <application
         android:icon="@drawable/lsicon"
+        android:allowBackup="false"
         android:label="@string/app_name" >
         <activity
             android:name=".LifeSaver"
@@ -47,6 +48,15 @@
         </activity>
         <activity
             android:name=".Restorer"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Done"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
